--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
-    <color name="bg_gradient_start">#31244e</color>
-    <color name="bg_gradient_end">#6b394c</color>
+    <color name="black">#000000</color>
+    <color name="bg_gradient_start">#AAAAAA</color>
+    <color name="bg_gradient_end">#FFFFFF</color>
 </resources>
